==> nguyenhoangnam110392/workspace/STM32F1/Card_reader/FATFS/diskio.c <==
#include <stm32f1xx.h>
#include "diskio.h"
#include "stm32f1xx_hal_gpio.h"
#include "stm32f1xx_hal_spi.h"
#include "stm32f1xx_hal_rcc.h"
 #define SPI_SD                   SPI1
 #define RCC_GPIO_CS              RCC_AHB1Periph_GPIOA
 #define GPIO_CS                  GPIOA
 #define GPIO_SPI_SD              GPIOA
 #define GPIO_Pin_CS              GPIO_PIN_4
 #define GPIO_Pin_SPI_SD_SCK      GPIO_PIN_5
 #define GPIO_Pin_SPI_SD_MISO     GPIO_PIN_6
 #define GPIO_Pin_SPI_SD_MOSI     GPIO_PIN_7
 #define RCC_SPI_SD               RCC_APB2Periph_SPI1
 #define SPI_BaudRatePrescaler_SPI_SD  SPI_BAUDRATEPRESCALER_8
#define CMD0	(0x40+0)	/* GO_IDLE_STATE */
#define CMD1	(0x40+1)	/* SEND_OP_COND (MMC) */
#define ACMD41	(0xC0+41)	/* SEND_OP_COND (SDC) */
#define CMD8 	(0x40+8)	/* SEND_IF_COND */
#define CMD9 	(0x40+9)	/* SEND_CSD */
#define CMD10	(0x40+10)	/* SEND_CID */
#define CMD12	(0x40+12)	/* STOP_TRANSMISSION */
#define CMD13	(0x40+13)	/* SEND_STATUS */
#define ACMD13	(0xC0+13)	/* SD_STATUS (SDC) */
#define CMD16	(0x40+16)	/* SET_BLOCKLEN */
#define CMD17	(0x40+17)	/* READ_SINGLE_BLOCK */
#define CMD18	(0x40+18)	/* READ_MULTIPLE_BLOCK */
#define CMD23	(0x40+23)	/* SET_BLOCK_COUNT (MMC) */
#define ACMD23	(0xC0+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(0x40+24)	/* WRITE_BLOCK */
#define CMD25	(0x40+25)	/* WRITE_MULTIPLE_BLOCK */
#define CMD55	(0x40+55)	/* APP_CMD */
#define CMD58	(0x40+58)	/* READ_OCR */

static uint8_t stm32_spi_rw(  uint8_t out )
{
	/* Loop while DR register in not empty */
	// while (SPI_I2S_GetFlagStatus(SPI_SD, SPI_I2S_FLAG_TXE) == RESET) { ; }

	/* Send byte through the SPI peripheral */
        //CS_L();
        SPI1->DR = out;
        
        //HAL_SPI_TransmitReceive(&SPI_InitStructure, &out, &ReceivedData, 128, 5000);
	//SPI_I2S_SendData(SPI_SD, out);
        //HAL_SPI_Transmit(&SPI_InitStructure, &out, 1, 5000);
        //CS_H();
        while (!(SPI1->SR & (SPI_FLAG_TXE)));

        // Wait until receive complete
        
        while (!(SPI1->SR & (SPI_FLAG_RXNE)));
        
        // Wait until SPI is not busy anymore
        
        while (SPI1->SR & (SPI_FLAG_BSY));

	/* Loop while DR register is empty */
	/* Wait to receive a byte */
        //while((SPI1->SR & (SPI_SR_TXE | SPI_SR_RXNE)) == 0 || (SPI1->SR & SPI_SR_BSY));
	//while (__HAL_SPI_GET_FLAG(&SPI_InitStructure, SPI_FLAG_RXNE) == RESET) { ; }

	/* Return the byte read from the SPI bus */
	//return SPI_I2S_ReceiveData(SPI_SD);
        return HAL_SPI_Receive(&SPI_InitStructure, &ReceivedData, 1, 50);
}

 void power (void)
{
	volatile static uint32_t  i;
	volatile uint8_t dummyread;

	/* Enable GPIO clock for CS */
        __HAL_RCC_GPIOA_CLK_ENABLE();

	for( i= 1000000;i>0;i--) { ;} /* wait for ready*/

	/* Configure I/O for Flash Chip select */
	GPIO_InitStructure.Pin   = GPIO_Pin_CS;
	GPIO_InitStructure.Mode  = GPIO_MODE_OUTPUT_PP;
        GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(GPIO_CS, &GPIO_InitStructure);

	/* De-select the Card: Chip Select high */
	//CS_H();

	/* Configure SPI pins: SCK and MOSI with default alternate function (not re-mapped) push-pull */
	GPIO_InitStructure.Pin   = GPIO_Pin_SPI_SD_SCK | GPIO_Pin_SPI_SD_MOSI;
	GPIO_InitStructure.Mode  = GPIO_MODE_AF_PP;
        GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
        GPIO_InitStructure.Pull  = GPIO_NOPULL;
	HAL_GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);
	/* Configure MISO as Input with internal pull-up */
	GPIO_InitStructure.Pin   = GPIO_Pin_SPI_SD_MISO;
	GPIO_InitStructure.Mode  = GPIO_MODE_AF_PP;
        GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
        GPIO_InitStructure.Pull  = GPIO_PULLUP;
	HAL_GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);

	/* SPI configuration */
        SPI_InitStructure.Instance = SPI1;
	SPI_InitStructure.Init.Direction = SPI_DIRECTION_2LINES;
	SPI_InitStructure.Init.Mode = SPI_MODE_MASTER;
	SPI_InitStructure.Init.DataSize = SPI_DATASIZE_8BIT;
	SPI_InitStructure.Init.CLKPolarity = SPI_POLARITY_LOW;
	SPI_InitStructure.Init.CLKPhase = SPI_PHASE_1EDGE;
	SPI_InitStructure.Init.NSS = SPI_NSS_SOFT;
	SPI_InitStructure.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256; // 72000kHz/256=281kHz < 400kHz
	SPI_InitStructure.Init.FirstBit = SPI_FIRSTBIT_MSB;
	SPI_InitStructure.Init.CRCPolynomial = 7;
        SPI_InitStructure.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
        SPI_InitStructure.Init.TIMode = SPI_TIMODE_DISABLE;

        HAL_SPI_Init(&SPI_InitStructure);
        
        HAL_GPIO_WritePin(GPIO_CS, GPIO_Pin_CS, GPIO_PIN_SET);
        uint8_t buffer[4] = { 0xFF, 0xFF, 0xFF, 0xFF };
	HAL_SPI_Transmit(&SPI_InitStructure, buffer, 4, 100);
	HAL_SPI_Transmit(&SPI_InitStructure, buffer, 4, 100);
	HAL_SPI_Transmit(&SPI_InitStructure, buffer, 4, 100);

        HAL_GPIO_WritePin(GPIO_CS, GPIO_Pin_CS, GPIO_PIN_RESET);
}

static
void power_off (void)
{
	select();
	wait_ready();/* escape if receive is oxff or time2 is out*/
	release_spi(); /* CS = HIGH*/

	HAL_SPI_DeInit(&SPI_InitStructure);
        __HAL_RCC_GPIOA_CLK_DISABLE();

	/* All SPI-Pins to input with weak internal pull-downs */
	GPIO_InitStructure.Pin   = GPIO_Pin_SPI_SD_SCK | GPIO_Pin_SPI_SD_MISO | GPIO_Pin_SPI_SD_MOSI;
	GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
        GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
        GPIO_InitStructure.Pull = GPIO_PULLDOWN;
	HAL_GPIO_Init(GPIO_SPI_SD, &GPIO_InitStructure);

}
